added docker and docker compose build files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,21 @@
 version: "3.1"
 services:
+  graphql:
+    build:
+      context: .
+      dockerfile: ./build/graphql/Dockerfile
+    ports:
+      - "9234:9234"
+    command: graphql
+    depends_on:
+      - postgres
+
   postgres:
     image: postgres:13-alpine
     restart: always
     environment:
-      POSTGRES_PASSWORD: boxgame
-      POSTGRES_USER: boxgame
-      POSTGRES_DB: boxgame
+      POSTGRES_PASSWORD: thebox
+      POSTGRES_USER: thebox
+      POSTGRES_DB: thebox
     ports:
       - 5432:5432
