--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vite-ts-material-ui",
-  "version": "0.0.0",
+  "name": "thebox",
+  "version": "0.0.1",
   "scripts": {
     "format": "prettier --write src",
     "lint": "eslint --ext .ts,.tsx src",
@@ -13,10 +13,14 @@
     "@emotion/styled": "11.3.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
+    "history": "^5.0.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-error-boundary": "^3.1.3",
+    "react-helmet-async": "^1.1.2",
     "react-router-dom": "6.0.0-beta.5",
-    "react-use": "^17.3.1"
+    "react-use": "^17.3.1",
+    "zustand": "^3.5.12"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
