--- a/.air.graphql.toml
+++ b/.air.graphql.toml
@@ -5,7 +5,7 @@ tmp_dir = "tmp"
   bin = "./tmp/graphql"
   cmd = "go build -o ./tmp/graphql ./cmd/graphql"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor"]
+  exclude_dir = ["assets", "tmp", "vendor", "web"]
   exclude_file = []
   exclude_regex = []
   exclude_unchanged = false
