--- a/web/package.json
+++ b/web/package.json
@@ -4,16 +4,22 @@
   "scripts": {
     "format": "prettier --write src",
     "lint": "eslint --ext .ts,.tsx src",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
+    "dev": "yarn server",
+    "prod": "yarn build && yarn server:prod",
+    "build": "vite build && vite build --ssr",
+    "server": "ts-node ./server",
+    "server:prod": "cross-env NODE_ENV=production ts-node ./server"
   },
   "dependencies": {
     "@apollo/client": "^3.4.15",
     "@emotion/react": "11.4.1",
+    "@emotion/server": "^11.4.0",
     "@emotion/styled": "11.3.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
+    "cross-fetch": "^3.1.4",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.6.0",
     "history": "^5.0.1",
     "react": "^17.0.0",
@@ -22,20 +28,24 @@
     "react-helmet-async": "^1.1.2",
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
+    "ts-node": "^10.2.1",
+    "vite-plugin-ssr": "^0.3.7",
     "zustand": "^3.5.12"
   },
   "devDependencies": {
-    "@types/node": "^14.14.31",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.10.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.4.1",
     "rc": "^1.2.8",
     "react-scripts": "^4.0.3",
     "typescript": "^4.1.2",
-    "vite": "^2.0.1",
+    "vite": "^2.6.3",
     "vite-plugin-checker": "^0.3.4"
   },
   "browserslist": {
