--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -5,7 +5,7 @@
     "types": ["vite/client", "node"],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -21,5 +21,11 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", "vite.config.ts", "cypress"]
+  "include": ["src", "server", "vite.config.ts", "cypress"],
+  "ts-node": {
+    "transpileOnly": true,
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  }
 }
