--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "dev": "yarn server",
     "prod": "yarn build && yarn server:prod",
     "build": "vite build && vite build --ssr",
+    "build:ssg": "vite build && vite build --ssr && vite-plugin-ssr prerender",
     "server": "ts-node ./server",
     "server:prod": "cross-env NODE_ENV=production ts-node ./server"
   },
