--- a/web/package.json
+++ b/web/package.json
@@ -9,18 +9,25 @@
     "build": "vite build && vite build --ssr",
     "build:ssg": "vite build && vite build --ssr && vite-plugin-ssr prerender",
     "server": "ts-node ./server",
-    "server:prod": "cross-env NODE_ENV=production ts-node ./server"
+    "server:prod": "cross-env NODE_ENV=production ts-node ./server",
+    "supabase:generate-types": "npx openapi-typescript \"$(grep VITE_SUPABASE_URL .env.local | cut -d '=' -f2 | cut -d '\"' -f 2)/rest/v1/?apikey=$(grep VITE_SUPABASE_ANON_KEY .env.local | cut -d '=' -f2 | cut -d '\"' -f 2)\" --output src/types/supabase.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.4.15",
+    "@date-io/dayjs": "^2.11.0",
     "@emotion/react": "11.4.1",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "11.3.0",
+    "@headlessui/react": "^1.4.1",
     "@mui/icons-material": "^5.0.1",
+    "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.1",
+    "@supabase/supabase-js": "^1.24.0",
     "cross-fetch": "^3.1.4",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "formik": "^2.2.9",
     "graphql": "^15.6.0",
     "history": "^5.0.1",
     "react": "^17.0.0",
@@ -30,10 +37,11 @@
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
     "ts-node": "^10.2.1",
-    "vite-plugin-ssr": "^0.3.7",
+    "vite-plugin-ssr": "^0.3.8",
     "zustand": "^3.5.12"
   },
   "devDependencies": {
+    "@iconify/react": "^3.0.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.0",
@@ -47,7 +55,9 @@
     "react-scripts": "^4.0.3",
     "typescript": "^4.1.2",
     "vite": "^2.6.3",
-    "vite-plugin-checker": "^0.3.4"
+    "vite-plugin-checker": "^0.3.4",
+    "vite-plugin-windicss": "^1.4.9",
+    "windicss": "^3.1.9"
   },
   "browserslist": {
     "production": [
