--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
     "build:ssg": "vite build && vite build --ssr && vite-plugin-ssr prerender",
     "server": "ts-node ./server",
     "server:prod": "cross-env NODE_ENV=production ts-node ./server",
-    "supabase:generate-types": "npx openapi-typescript \"$(grep VITE_SUPABASE_URL .env.local | cut -d '=' -f2 | cut -d '\"' -f 2)/rest/v1/?apikey=$(grep VITE_SUPABASE_ANON_KEY .env.local | cut -d '=' -f2 | cut -d '\"' -f 2)\" --output src/types/supabase.ts"
+    "supabase:generate-types": "npx openapi-typescript \"$(grep VITE_SUPABASE_URL .env.local | cut -d '=' -f2 | cut -d '\"' -f 2)/rest/v1/?apikey=$(grep VITE_SUPABASE_ANON_KEY .env.local | cut -d '=' -f2 | cut -d '\"' -f 2)\" --output src/types/supabase.ts",
+    "graphql:generate-types": "apollo client:codegen --localSchemaFile=../internal/graphql/schema.graphqls --target=typescript --tagName=gql --outputFlat src/graphql/types --passthroughCustomScalars --customScalarsPrefix=TheBox."
   },
   "dependencies": {
     "@apollo/client": "^3.4.15",
@@ -30,6 +31,7 @@
     "formik": "^2.2.9",
     "graphql": "^15.6.0",
     "history": "^5.0.1",
+    "notistack": "^2.0.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-error-boundary": "^3.1.3",
@@ -37,16 +39,19 @@
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
     "ts-node": "^10.2.1",
-    "vite-plugin-ssr": "^0.3.8",
+    "vite-plugin-ssr": "^0.3.9",
+    "yup": "^0.32.9",
     "zustand": "^3.5.12"
   },
   "devDependencies": {
     "@iconify/react": "^3.0.1",
     "@types/express": "^4.17.13",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.1.0",
+    "apollo": "^2.33.6",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -58,6 +63,9 @@
     "vite-plugin-checker": "^0.3.4",
     "vite-plugin-windicss": "^1.4.9",
     "windicss": "^3.1.9"
+  },
+  "resolutions": {
+    "graphql": "^15.6.0"
   },
   "browserslist": {
     "production": [
