Fixed delete 'cr' prettier error

--- a/web/.prettierrc
+++ b/web/.prettierrc
@@ -6,5 +6,6 @@
   "semi": false,
   "arrowParens": "avoid",
   "bracketSpacing": true,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "endOfLine": "auto"
 }
