--- a/web/package.json
+++ b/web/package.json
@@ -23,12 +23,17 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.1",
+    "@react-three/drei": "^7.16.0",
+    "@react-three/fiber": "^7.0.16",
     "@supabase/supabase-js": "^1.24.0",
+    "babel-plugin-glsl": "^1.0.0",
     "cross-fetch": "^3.1.4",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "formik": "^2.2.9",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
     "graphql": "^15.6.0",
     "history": "^5.0.1",
     "notistack": "^2.0.2",
@@ -38,20 +43,25 @@
     "react-helmet-async": "^1.1.2",
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
+    "three": "^0.133.1",
     "ts-node": "^10.2.1",
     "vite-plugin-ssr": "^0.3.9",
     "yup": "^0.32.9",
     "zustand": "^3.5.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.8",
     "@iconify/react": "^3.0.1",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.10.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/three": "^0.133.1",
     "@vitejs/plugin-react-refresh": "^1.1.0",
     "apollo": "^2.33.6",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^4.0.0",
