--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^17.0.0",
     "react-error-boundary": "^3.1.3",
     "react-helmet-async": "^1.1.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
     "three": "^0.133.1",
