--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "glslify": "^7.1.1",
     "graphql": "^15.6.0",
     "history": "^5.0.1",
+    "immer": "^9.0.6",
     "notistack": "^2.0.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
