--- a/web/package.json
+++ b/web/package.json
@@ -30,8 +30,10 @@
     "cross-fetch": "^3.1.4",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
+    "emoji-mart": "^3.0.1",
     "express": "^4.17.1",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
     "graphql": "^15.6.0",
@@ -46,6 +48,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
+    "rebound": "^0.1.0",
     "three": "^0.133.1",
     "ts-node": "^10.2.1",
     "vite-plugin-ssr": "^0.3.9",
@@ -55,6 +58,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@iconify/react": "^3.0.1",
+    "@types/emoji-mart": "^3.0.8",
     "@types/express": "^4.17.13",
     "@types/graphql": "^14.5.0",
     "@types/node": "^16.10.3",
