--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "@react-three/fiber": "^7.0.16",
     "@supabase/supabase-js": "^1.24.0",
     "@types/react-highlight-words": "^0.16.3",
+    "blobity": "^0.1.7",
     "cross-fetch": "^3.1.4",
     "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
@@ -45,7 +46,6 @@
     "react-error-boundary": "^3.1.3",
     "react-helmet-async": "^1.1.2",
     "react-highlight-words": "^0.17.0",
-    "react-icons": "^4.3.1",
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
     "rebound": "^0.1.0",
