--- a/web/package.json
+++ b/web/package.json
@@ -42,6 +42,7 @@
     "immer": "^9.0.6",
     "notistack": "^2.0.2",
     "react": "^17.0.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^17.0.0",
     "react-error-boundary": "^3.1.3",
     "react-helmet-async": "^1.1.2",
