--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,7 @@
     "react-highlight-words": "^0.17.0",
     "react-router-dom": "6.0.0-beta.5",
     "react-use": "^17.3.1",
+    "react-waypoint": "^10.1.0",
     "rebound": "^0.1.0",
     "three": "^0.133.1",
     "ts-node": "^10.2.1",
