--- a/web/package.json
+++ b/web/package.json
@@ -44,6 +44,7 @@
     "react": "^17.0.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^17.0.0",
+    "react-dropzone": "^11.4.2",
     "react-error-boundary": "^3.1.3",
     "react-helmet-async": "^1.1.2",
     "react-highlight-words": "^0.17.0",
